US08: sort followers by name ASC/DESC implemented